# bookstore

./: .gitignore  pyproject.toml
bookstore/: settings.py
order/: urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py
product/models/: __init__.py  product.py
product/serializers/: category_serializer.py
product/tests/test_serializers/: test_product_serializer.py
